--- a/css/style.css
+++ b/css/style.css
@@ -654,9 +654,17 @@ h3.title:before {
 }
 
 
+/* //Temporada 1 eu */
 
-
-
+.cap1eu {
+    background: url(../images/Series/euphoria/euphoria.jpg) no-repeat center;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    -ms-background-size: cover;
+    min-height: 470px;
+}
 
 
 
